flapivor/tests/m3/hopix/typechecker/good/24-record-proj.hopix
type P = { x : Int; y : String }

val p : P = { x = 42; y = "Dalek" }<>

val px : Int = p.x

val py : String = p.y