flapivor/tests/m3/hopix/typechecker/bad/31-record-05.hopix
type T = { l : Int }

val r : T = { l = 0; l = 1 }<>